# tempyenv

./: .travis.yml  LICENSE  README.md  howto_publish_new_release.md  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: ci.yml  tests.yml
lib/tempyenv/: cli.py
src/tempyenv/: __init__.py  __main__.py  cli.py
tests/units/: test_cli.py
