[project]
name = "tempyenv"
version = "1.0.0"
authors = [
  { name="David Whiteside", email="david@davidwhiteside.com" },
]
description = "Easiest and quickest way to setup a temporary python virtual environment"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/outbit/tempyenv"
Issues = "https://github.com/outbit/tempyenv/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
tempyenv = "tempyenv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]